# ma-geoparser-h3-resolver

./: .gitignore  README.md  pyproject.toml
geoparser_h3_resolver/: __init__.py  resolver.py
geoparser_h3_resolver/association/: __init__.py  compute.py
geoparser_h3_resolver/configs/: swissnames3d.yaml
geoparser_h3_resolver/pipeline/: __init__.py  build.py  build_config.py
geoparser_h3_resolver/sentence_generator/: __init__.py  association_loader.py  batch_generator.py  config.py  generator.py  templates.py
